# nx

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  TODO.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
plugins/python/: CHANGELOG.md  README.md  executors.json  generators.json  package.json  project.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts  vite.config.ts
plugins/python/src/: constants.ts  index.spec.ts  index.ts
plugins/python/src/executors/lint/: lint.spec.ts  lint.ts  schema.d.ts  schema.json
plugins/python/src/executors/publish/: publish.spec.ts  publish.ts  schema.d.ts  schema.json
plugins/python/src/executors/serve/: schema.d.ts  schema.json  serve.spec.ts  serve.ts
plugins/python/src/executors/test/: schema.d.ts  (+3 more)
plugins/python/src/release/: version-actions.ts
plugins/python/src/testing/: create-executor-context.ts  index.ts
plugins/python/src/utils/: dependencies.spec.ts  dependencies.ts  framework.spec.ts  framework.ts  generator-prompts.spec.ts  generator-prompts.ts  gitignore.spec.ts  gitignore.ts  linter.spec.ts  linter.ts  project-name-and-root-utils.spec.ts  project-name-and-root-utils.ts  toml.spec.ts  toml.ts  unit-test-runner.spec.ts  unit-test-runner.ts  uv.spec.ts  uv.ts
test-projects/python-app/: main.py  project.json  pyproject.toml
test-projects/python-app/tests/: test_main.py
test-projects/python-lib/: project.json  pyproject.toml
test-projects/python-lib/src/python_lib/: my_class.py
test-projects/python-lib/tests/: test_my_class.py
(+22 files in other folders)
